fix: nowrap on team member name

--- a/singolo2.css
+++ b/singolo2.css
@@ -47,7 +47,7 @@ h2 {
   margin-left: 40px;
 }
 
-.filters {
+.portfolio__filters {
   display: flex;
   margin: 11px 0 19px 41px;
   
@@ -120,6 +120,7 @@ h2 {
   font-weight: 900;
   margin-top: 13px;
   letter-spacing: -0.2px;
+  white-space: nowrap;
 }
 
 .team-member__info {
